src/app/public/public.component.less
@import "../../_base";
@import "../../_settings";

/* Navbar
-------------------------------------------------- */
.navbar__wrapper {
  left: 0;
  position: absolute;
  right: 0;
  width: 100%;
  z-index: 20;
}


/* Favorites
-------------------------------------------------- */
.favorite-group {
  background-color: @light-grey;
}

.favorite {
  background: @white;
  height: 100%;
  margin: 0 0 20px 0;
  max-height: 500px;
  overflow: hidden;
  padding: 0;
  position: relative;
  text-align: center;

  &__heading {
    margin-bottom: 30px;
    text-align: center;

    &--yellow {
      color: @yellow;
    }
  }

  &__recipe {
    font-size: 22px;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
  }

  &__cover{
    height: auto;
    left: -15%;
    overflow: hidden;
    position: relative;
    width: 130%;

    &--top {
      background-position: center center;
      background-size: cover;
      border-radius: 0 0 50% 50%;
      display: block;
      height: 22em;
      margin-top: -9.5em;
      overflow: hidden;
      position: relative;
      z-index: 2;

      & img {
        height: inherit;
      }
    }
  }

  &__info {
    box-sizing: border-box;
    height: 100%;
    left: 0;
    padding: 20px;
    width: 100%;
    z-index: 3;
  }

  &__text {
    height: 60px;
    margin-top: 0.65em;
    overflow: hidden;
    position: relative;
    text-overflow: ellipsis;

    &:after {
      .overflow-gradient();
      bottom: 0;
      content: "";
      height: 20px;
      position: absolute;
      right: 0;
      text-align: right;
      width: 50%;
    }
  }

  &__like {
    display: block;
  }

  &__button {
    margin: 1.75em 0 2.6em;
  }
}


/* Tip
-------------------------------------------------- */
.tip {
  background-color: @green;
  background-image: url("/assets/img/food-pattern.png");

  &__heading {
    color: @white;
    font-size: 30px;
    margin-bottom: 30px;
  }

  &__text {
    color: @white;
    font-size: 16px;
    padding-bottom: 20px;
  }

  &__btn {
    background-color: @white;
    border: 2px solid @white !important;
    color: @green;

    &:hover {
      background-color: transparent;
      border: 2px solid @white;
      color: @white;
    }
  }
}


/* Categories
-------------------------------------------------- */
.category-group {
  background-image: url("/assets/img/cherry.jpeg");
  background-position: center;
  background-repeat: no-repeat;
}

.category {
    background-color: @light-grey;
    border: 1px solid @light-grey;
    border-radius:40px;
    -moz-border-radius: 40px;
    -webkit-border-radius: 40px;
    margin: 20px auto;
    padding: 50px;
    width: 300px;

  &__heading {
    margin: 0 0 30px 0;

    &--yellow {
      color: @yellow;
    }
  }

  &__img {
    background-color: @white;
    border: 1px solid @white;
    border-radius: 100%;
    display: block;
    height: 170px;
    margin: 0 auto;
    width: 170px;

    &--top {
      float: left;
      height: 100%;
      left: 20%;
      max-height: 100px;
      position: relative;
      top: 20%;
      vertical-align: center;
    }
  }

  &__title {
    font-size: 24px;
    text-align: center;
  }
}


/* RESPONSIVE CSS
-------------------------------------------------- */
@media (min-width: 568px) {
  .col.xs-12 {
    width: 50px;
  }
}

@media (min-width: 768px) {
  .favorite {
    &__text {
      height: 70px;
    }
  }
}

@media (min-width: 992px) {
  .featurette-heading {
    margin-top: 120px;
  }

  .favorite {
    &__heading {
      font-size: 50px;
      margin: 0 0 50px 0;
    }
  }

  .category-group {
    background-position: -25% 80%;
    background-size: 80% auto;

    img {
      max-width: 100%;
      transition: all 0.3s;

      &:hover {
        cursor: pointer;
        transform: scale(1.1);
      }
    }
  }

  .category {
    &__heading {
      font-size: 50px;
      margin: 0 0 50px 0;
    }
  }

  .tip  {
    &__heading {
      font-size: 50px;
      margin-bottom: 50px;
    }

    &__text {
      font-size: 20px;
    }
  }
}

@media (min-width: 1024px) {
  .navbar__wrapper {
    padding: 0 40px;
  }
}

